duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_len_int32.ml
[%%cstruct
  type t = {
    a: uint8_t [@len 8l]
  }
  [@@little_endian]
]
